# Dabiran

./: .gitignore  PROGRESS.md  README.md  package-lock.json  package.json  podman-compose.yaml
.agents/rules/: software-developer-rules.md
.agents/workflows/: software-developer-workflow.md
apps/backend/: .env.example  Dockerfile  go.mod  go.sum  package.json
apps/backend/src/: main.go  main_test.go
apps/backend/src/auth/: jwt.go  (+4 more)
apps/frontend/: Dockerfile  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/frontend/__mocks__/: y-websocket.ts
apps/frontend/src/: App.test.tsx  App.tsx  main.test.tsx  main.tsx
apps/worker/: .dockerignore  Cargo.toml  Dockerfile  README.md
apps/worker/src/: lib.rs  main.rs
backend/: Containerfile  main.go
backend/api/: router.go
backend/crypto/: crypto.go
backend/db/: db.go
backend/gitengine/: engine.go  topology.go
backend/models/: models.go
backend/ws/: client.go  hub.go
cicd/: build.yaml  deploy.yaml
docs/: apis_doc.md  architecture.md  features_doc.md  functions_doc.md  local-setup.md  tech_stack.md  todo_features.md
docs/adr/: .gitkeep
docs/manuals/: access-admin-guide.md  cloud-admin-guide.md  user-guide.md
frontend/: Containerfile  index.html  package.json
frontend/src/: App.tsx  mockData.ts
frontend/src/components/: Canvas.tsx  NodeEngine.tsx
frontend/src/store/: useCRDT.ts  useStore.ts
infra/: docker-compose.yml
infra/kubernetes/base/: .gitkeep  backend-deployment.yaml  frontend-deployment.yaml  kustomization.yaml  postgres-statefulset.yaml  secrets.yaml
(+60 files in other folders)
